[tool.poetry]
name = "portfolio_risk_metrics"
version = "0.1.0"
description = ""
authors = ["Ksenia Bolshakova <bolshakovaks@icloud.com>"]
readme = "README.md"
packages = [{include = "portfolio_risk_metrics"}]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.12"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
